--- a/youtube-counter/manifest.json
+++ b/youtube-counter/manifest.json
@@ -1,26 +1,30 @@
 {
-  "name": "Youtube Counter",
-  "description": "Conte quantas vezes um video foi assistido.",
-  "version": "1.0",
-  "manifest_version": 3,
-  "background": {
-    "service_worker": "background/background.js"
-  },
-  "permissions": ["storage", "activeTab", "scripting"],
-  "action": {
-    "default_popup": "popup/popup.html",
-    "default_icon": {
-      "16": "/images/get_started16.png",
-      "32": "/images/get_started32.png",
-      "48": "/images/get_started48.png",
-      "128": "/images/get_started128.png"
-    }
-  },
-  "icons": {
-    "16": "/images/get_started16.png",
-    "32": "/images/get_started32.png",
-    "48": "/images/get_started48.png",
-    "128": "/images/get_started128.png"
-  },
-  "options_page": "options/options.html"
+    "name": "Youtube Counter",
+    "description": "Conte quantas vezes um video foi assistido.",
+    "version": "1.0",
+    "manifest_version": 3,
+    "background": {
+        "service_worker": "background/background.js"
+    },
+    "permissions": [
+        "storage",
+        "activeTab",
+        "scripting"
+    ],
+    "action": {
+        "default_popup": "popup/popup.html",
+        "default_icon": {
+            "16": "/images/get_started16.png",
+            "32": "/images/get_started32.png",
+            "48": "/images/get_started48.png",
+            "128": "/images/get_started128.png"
+        }
+    },
+    "icons": {
+        "16": "/images/get_started16.png",
+        "32": "/images/get_started32.png",
+        "48": "/images/get_started48.png",
+        "128": "/images/get_started128.png"
+    },
+    "options_page": "options/options.html"
 }
